tests/run-pass/spellcheck.rs
#![feature(plugin)]
#![plugin(ronat)]

/// This is a text misssspell.
pub fn main() {
}
